Two buttons modifies

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h1>Les Chats du XXème</h1>
                     </div>    
                     <div class="col-3">
-                        <button class="btn button1">Adhérer à l'association</button>
+                        <a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#contact" class="btn button1">Adhérer à l'association</a>
                     </div>
                 </div>
             
@@ -82,7 +82,7 @@
                     <img class="img-responsive img" src="cat.jpg" style="width:100%" alt="chat" >
                 <div class="textImage">
                     <h2>Adoptez un chat<br>ou un chaton</h2>
-                    <button href="#" class="btn button2">Voir tous les chats</button>
+                    <a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#adoptions" class="btn button2">Voir tous les chats</a>
                 </div>           
                  
             <div class="container">
@@ -230,8 +230,8 @@
         </section>
     </main>
 
-    <footer class="foot">
-        <div class="contact" id="contact">
+    <footer class="foot" id="contact">
+        <div class="contact" >
             <p>Contactez-nous !</p>
             <form class="formulaire">
                 <div class="row form-group">
