inner links repaired

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="container-fluid card sticky-top"> 
         <nav class="navbar navbar-expand-lg">
-            <div class="navbar-brand image btn"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html">
+            <div class="navbar-brand image btn"><a href="https://les-chats-du-xxeme.herokuapp.com/">
                 <img 
                     src="logo-cat.jpg" 
                     height="100px" 
@@ -36,10 +36,10 @@
 
             <div class="nav collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html" class="nav-link">ACCUEIL</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#adoptions" class="nav-link">ADOPTIONS</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/actualite-chats-du-XX.html" class="nav-link">ACTUALITES</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#contact" class="nav-link">CONTACT</a></li>
+                    <li class="nav-item"><a href="https://les-chats-du-xxeme.herokuapp.com/" class="nav-link">ACCUEIL</a></li>
+                    <li class="nav-item"><a href="index.html#adoptions" class="nav-link">ADOPTIONS</a></li>
+                    <li class="nav-item"><a href="actualite-chats-du-XX.html" class="nav-link">ACTUALITES</a></li>
+                    <li class="nav-item"><a href="index.html#contact" class="nav-link">CONTACT</a></li>
                 </ul>    
             </div>
 
@@ -73,7 +73,7 @@
                         <h1>Les Chats du XXème</h1>
                     </div>    
                     <div class="col-3">
-                        <a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#contact" class="btn button1">Adhérer à l'association</a>
+                        <a href="index.html#contact" class="btn button1">Adhérer à l'association</a>
                     </div>
                 </div>
             
@@ -82,7 +82,7 @@
                     <img class="img-responsive img" src="cat.jpg" style="width:100%" alt="chat" >
                 <div class="textImage">
                     <h2>Adoptez un chat<br>ou un chaton</h2>
-                    <a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#adoptions" class="btn button2">Voir tous les chats</a>
+                    <a href="index.html#adoptions" class="btn button2">Voir tous les chats</a>
                 </div>           
                  
             <div class="container">
