--- a/actualite-chats-du-XX.html
+++ b/actualite-chats-du-XX.html
@@ -22,7 +22,7 @@
 <body>
     <header class="container-fluid card sticky-top"> 
         <nav class="navbar navbar-expand-lg">
-            <div class="navbar-brand image btn"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html">
+            <div class="navbar-brand image btn"><a href="https://les-chats-du-xxeme.herokuapp.com/">
                 <img 
                     src="logo-cat.jpg" 
                     height="100px" 
@@ -45,10 +45,10 @@
 
             <div class="nav collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html" class="nav-link">ACCUEIL</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#adoptions" class="nav-link">ADOPTIONS</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/actualite-chats-du-XX.html" class="nav-link">ACTUALITES</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/Olivier/ProjetAssociation/index.html#contact" class="nav-link">CONTACT</a></li>
+                    <li class="nav-item"><a href="https://les-chats-du-xxeme.herokuapp.com/" class="nav-link">ACCUEIL</a></li>
+                    <li class="nav-item"><a href="index.html#adoptions" class="nav-link">ADOPTIONS</a></li>
+                    <li class="nav-item"><a href="actualite-chats-du-XX.html" class="nav-link">ACTUALITES</a></li>
+                    <li class="nav-item"><a href="index.html#contact" class="nav-link">CONTACT</a></li>
                 </ul>    
             </div>
 
