link photo repaired

--- a/actualite-chats-du-XX.html
+++ b/actualite-chats-du-XX.html
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-5 cat5">
-                    <img class="img-responsive" width="100%" height="auto" src="file:///C:/Users/Olivier/ProjetAssociation/cat4.jpg" alt="chat noir et blanc">
+                    <img class="img-responsive" width="100%" height="auto" src="cat4.jpg" alt="chat noir et blanc">
                 </div>
                 <div class="col-sm-7 mt-5">
                     <h5 style="color: orange;">Vous aimez les animaux et vous souhaiter accueillir un chat ou un chaton de manière temporaire ou vous souhaitez adopter.</h5>
