correct fonts imported

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div>
                     <img class="img-responsive img" src="cat.jpg" style="width:100%" alt="chat" >
                 <div class="textImage">
-                    <h2>Adoptez un chat<br>ou un chaton</h2>
+                    <h2>Adoptez un chat<br>ou un chaton !</h2>
                     <a href="index.html#adoptions" class="btn button2">Voir tous les chats</a>
                 </div>           
             </div>     
